TST-68 Mobile menu design implementation Re-structured mobile menu to match mockups closely Added recipes/blogs to account section on mobile Updated desktop header/menu styles to account for mobile structure Fixed issue with logo being slighyly skewed on mobile Changed "sign out" to "logout" for account Changed 757575 to 2d2d2d in config.json Fixed permissions for en.json to 644 Added frametext-body class to styleguide

--- a/assets/scss/_tasteful-theme.scss
+++ b/assets/scss/_tasteful-theme.scss
@@ -205,6 +205,9 @@ a,
 .frametext-semibold{
     font:600 16px stencilFontFamily("body-font"); 
 }
+.frametext-body{
+    @extend .frametext;
+}
 .frameheading-1{
     @extend .frametext-black;
 }
